[project]
name = "basoka-flaskreporter"
version = "0.1.0"
description = "Flask server for managing and monitoring BasoKa checker processes via Telegram bot API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "selenium>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.7",
    "pytest>=7.0.0",
    "pytest-flask>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]  # Line too long (handled by formatter)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
